--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,38 @@
-*{
-    box-sizing: border-box;
-}
-
-html{
+html {
     height: 100%;
-}
-
-body{
-    margin: 0;
-    font-family: 'Fraunces', sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-}
-
-img{
-    display: block;
+    scroll-behavior: smooth;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+  
+ 
+  body{
+    display: flex;
+    flex-direction: column;
+      margin: 0;
+      padding: 0;
+      font-family: 'Fraunces', sans-serif;
+      height: 100%;
+      font-weight: 400;
+      font-size: 16px;
+  }
+  
+  main {
+    flex-grow: 1;
+  }
+  
+  img {
+    max-width: 100%;
+    height: 100%;
     vertical-align: middle;
-}
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+
 
 .container{
     width: 100%;
@@ -175,72 +191,229 @@ img{
     }
 }
 
-.picture{
+
+.services__list{
     margin: 0;
     padding: 0;
-    width: 100%;
-}
-
-.picture__inner{
-    width: 100%;;
-}
-
-.picture__list{
-    margin: 0;
-    padding: 0;
-    width: 100%;
     list-style-type: none;
+    text-align: center;
 }
 
-.picture__item{
-    padding-left: 0;
+.services__item{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
-.picture__wrapper{
-    width: 327px;
+.image{
+    width: 100%;
 }
 
-.picture__title{
+.services__image{
+    width: 100%;
+    height: auto;
+}
+
+.services__wrapper{
+    width: 100%;
+    padding: 64px 24px;
+}
+
+.services__title{
     margin: 0;
-    margin-top: 64px;
-    margin-bottom: 24px;
     color: #24303E;
     text-align: center;
     font-size: 32px;
     font-weight: 900;
+    line-height: 39px;
     letter-spacing: -0.229px;
 }
 
-.picture__text{
-    margin: 0;
-    margin-bottom: 32px;
+.services__text{
+    margin: 24px 0 32px 0;
     color: #808397;
     text-align: center;
     font-family: "Barlow";
     font-size: 18px;
     font-weight: 600;
-    line-height: 30px;
+    line-height: 30px; /* 166.667% */
     letter-spacing: -0.129px;
 }
 
-.picture__link{
-    display:block;
-    margin: 0 auto;
-    margin-bottom: 64px;
-    width: 137px;
-    text-decoration: underline rgb(255, 234, 112 ) 10px;
+.services__link{
+    display: inline-block;
     color: #24303E;
     font-size: 15px;
     font-weight: 900;
-    line-height: 25px; 
+    line-height: 25px;
     letter-spacing: 1px;
     text-transform: uppercase;
+    text-decoration: none;
 }
 
-.picture__link:nth-child(2){
-    text-decoration: underline  #FE7766 10px;
+.services__link::before{
+    left: -10%;
+    bottom: 2px;
+    width: 120%;
+    height: 10px;
+    background-color: #fad400;
+    opacity: 0.25;
+    border-radius: 50px;
+    content: "";
 }
 
-@media only screen and (min-width:400px) {
-
+.services__link--second::before{
+    background-color: #fe7766;
 }
+
+.services__link::before:hover{
+    opacity: 1;
+}
+
+@media only screen and (min-width:740px) {
+    .services__item{
+        display: flex;
+        flex-direction: row-reverse;
+    }
+
+    .services__item:nth-child(2){
+        flex-direction: row;
+    }
+
+    .services__image, .services__wrapper{
+        width: 50%;
+
+    }
+
+    .services__wrapper{
+        padding-top: 0;
+        padding-bottom: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .image{
+        width: 100%;
+        height: auto;
+    }
+    
+}
+
+@media only screen and (min-width:1120px){
+  .services__inner{
+    width: 440px;
+    text-align:left;
+  }
+
+  .services__title{
+    font-size: 40px;
+  }
+}
+
+.fruits{
+    width: 100%;
+}
+.fruits__list{
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+.fruits__item{
+    padding: 398px 0 59px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.fruits__item:nth-child(1){
+    display: block;
+    background-image: url("../images/cherryMobile.png");
+}
+
+.fruits__item:nth-child(2){
+    display: block;
+    background-image: url("../images/mandarinMobile.png");
+}
+
+.fruits__wrapper{
+    width: 100%;
+    margin: 0 auto;
+    max-width: 327px;
+    text-align: center;
+}
+
+.fruits__title{
+    margin: 0;
+    margin-bottom: 27px;
+    color: #052C3B;
+    text-align: center;
+    font-size: 28px;
+    font-weight: 900;
+    letter-spacing: -0.2px;
+}
+
+.fruits__text{
+    margin: 0;
+    color: #19536C;
+    text-align: center;
+    font-family: "Barlow";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 27px;
+    letter-spacing: -0.114px;
+}
+
+.first{
+    color: #24554A;
+}
+
+@media only screen and (min-width:480px) {
+    .fruits__title{
+        margin-top: 52px;
+    }
+}
+
+@media only screen and (min-width:540px) {
+    .fruits__title{
+        margin-top: 100px;
+    }
+}
+
+@media only screen and (min-width:800px) {
+
+    .fruits__item{
+        width: 50%;
+    }
+
+
+    .fruits__list{
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+    }
+}
+
+@media only screen and (min-width:1100px) {
+
+    .fruits__title{
+        margin-top: 0;
+    }
+
+    .fruits__item:nth-child(1){
+        background-image: url("../images/cherry.png");
+    }
+    
+    .fruits__item:nth-child(2){
+        background-image: url("../images/mandarin.png");
+    }
+    
+}
+
+
+
+
+
+
+
